# dingo-poc

./: CMakeLists.txt
.github/workflows/: cmake-build1.yml  cmake.yml
cmake/: libunwind.cmake  xdprocks.cmake
conf/: coordinator.yaml  index.template.yaml  index.yaml  store.template.yaml  store.yaml
proto/: coordinator.proto  coordinator_internal.proto  error.proto  index.proto  raft.proto  store.proto
src/client/: client_helper.h  coordinator_client.cc  coordinator_client_function.h  coordinator_client_function_coor.cc  coordinator_client_function_kv.cc  coordinator_client_function_meta.cc  dingodb_client.cc  store_client_function.cc  store_client_function.h  store_tool_dump.cc
src/common/: constant.h  context.h  helper.cc  helper.h  latch.cc  latch.h  synchronization.h  version.h
src/coordinator/: coordinator_control.cc  coordinator_control.h  coordinator_control_coor.cc  coordinator_control_fsm.cc  coordinator_control_meta.cc
src/coprocessor/: coprocessor.cc
src/engine/: engine.h  raft_store_engine.cc  raft_store_engine.h  raw_engine.h  raw_rocks_engine.cc  raw_rocks_engine.h  rocks_engine.cc  storage.cc  storage.h  txn_engine_helper.cc  write_data.h
src/handler/: handler.h  raft_apply_handler.cc  raft_apply_handler.h  raft_apply_handler_txn.cc  raft_snapshot_handler.cc
src/meta/: store_meta_manager.cc  store_meta_manager.h
src/metrics/: store_metrics_manager.cc
src/raft/: dingo_filesystem_adaptor.cc  dingo_filesystem_adaptor.h  (+1 more)
test/: CMakeLists.txt  test_helper.cc
test/unit_test/: test_latch.cc  test_vector_index.cc
xdprocks/: note.txt
(+24 files in other folders)
